minor spacing issues, fixed edit-button bug

--- a/blocks/form/__heading/form__heading.css
+++ b/blocks/form/__heading/form__heading.css
@@ -1,5 +1,5 @@
 .form__heading {
-  margin: 30px 0 54px 36px;
+  margin: 35px 0 48px 36px;
   font-size: 24px;
   font-weight: 900;
   line-height: 29px;
