--- a/blocks/profile/__name-wrapper/profile__name-wrapper.css
+++ b/blocks/profile/__name-wrapper/profile__name-wrapper.css
@@ -1,6 +1,6 @@
 .profile__name-wrapper {
   margin: 22px 0 16px 0;
-  max-width: 500px;
+  max-width: 550px;
   display: flex;
   flex-direction: row;
 }
