--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,11 +1,11 @@
 .profile__name {
-  margin: 0;
+  margin: 0 18px 0 0;
   font-size: 42px;
   font-weight: 500;
   line-height: 48px;
   color: #fff;
-  text-overflow: ellipsis;
   max-width: 500px;
+  text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
 }
